--- a/index.html
+++ b/index.html
@@ -837,21 +837,21 @@
       </div>
       <div class="mb-header-body">
         <ul>
-          <li><a href=""><span>Men</span></a></li>
-          <li><a href=""><span>Women</span></a></li>
-          <li><a href=""><span>Kid</span></a></li>
-          <li><a href=""><span>Home & Living</span></a></li>
-          <li><a href=""><span>Beauty</span></a></li>
+          <li><a href="product list.html"><span>Men</span></a></li>
+          <li><a href="product list.html"><span>Women</span></a></li>
+          <li><a href="product list.html"><span>Kid</span></a></li>
+          <li><a href="product list.html"><span>Home & Living</span></a></li>
+          <li><a href="product list.html"><span>Beauty</span></a></li>
           <li>
             <hr>
           </li>
-          <li><a href=""><span>Account</span></a></li>
-          <li><a href=""><span>Orders</span></a></li>
-          <li><a href=""><span>Studio</span></a></li>
-          <li><a href=""><span>Myntra Mall</span></a></li>
-          <li><a href=""><span>Gifts card</span></a></li>
-          <li><a href=""><span>COnatc Us</span></a></li>
-          <li><a href=""><span>FAQs</span></a></li>
+          <li><a href="index.html"><span>Account</span></a></li>
+          <li><a href="index.html"><span>Orders</span></a></li>
+          <li><a href="index.html"><span>Studio</span></a></li>
+          <li><a href="index.html"><span>Myntra Mall</span></a></li>
+          <li><a href="index.html"><span>Gifts card</span></a></li>
+          <li><a href="index.html"><span>COnatc Us</span></a></li>
+          <li><a href="index.html"><span>FAQs</span></a></li>
         </ul>
       </div>
     </div>
@@ -1040,5 +1040,6 @@
     });
   </script>
 </body>
+
 
 </html>
